--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-
-    <link rel="icon" type="image/jpg" href="http://example.com/img/A.jpg" sizes="32x32">
+    <link
+      rel="icon"
+      type="image/jpg"
+      href="http://example.com/img/A.jpg"
+      sizes="32x32"
+    />
     <meta charset="UTF-8" />
     <meta
       name="description"
@@ -73,7 +77,34 @@
     </section>
 
     <main>
-      <section></section>
+      <section>
+        <h2>Accessibles a tous niveaux</h2>
+
+        <article>
+          <figure class="velo"><img src="assets/img/vert.jpeg" alt="velo en seine novice" /></figure>
+          <h3>Parcours Débutant(e)</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+        </article>
+        <article>
+          <figure class="velo"><img src="assets/img/rose.jpeg" alt="velo en seine famille" /></figure>
+          <h3>Parcours décourverte en famille</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+        </article>
+        <article>
+          
+          <div class="bleu">
+            <!-- plus tard le coeur -->
+          </div>
+          <figure class="velo"><img src="assets/img/bleu.jpeg" alt="velo en saine location de velo" /></figure>
+          <h3>Lococation de vélo électrique</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+        </article>
+        <article>
+          <figure class="velo"><img src="assets/img/rouge.jpeg" alt="velo en seine expert" /></figure>
+          <h3>Parcours pour niveaux avancée</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+        </article>
+      </section>
       <section></section>
       <section></section>
     </main>
