--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vélo en seine</title>
 
+    <script
+      src="https://kit.fontawesome.com/c2c0a7c55a.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,14 +34,14 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
-  <body id="header">
+  <body id="change"><div>
+        <button id="button">Salut bg</button>
+      </div>
     <header>
       <a href="index.html"
         ><img src="assets/img/logo.svg" alt="VeloEnSeine"
       /></a>
-      <div>
-        <button id="button">Salut bg</button>
-      </div>
+      
 
       <nav class="navbar">
         <!-- <a href="#" class="nav-branding">DEV.</a> -->
@@ -80,32 +85,181 @@
       <section>
         <h2>Accessibles a tous niveaux</h2>
 
-        <article>
-          <figure class="velo"><img src="assets/img/vert.jpeg" alt="velo en seine novice" /></figure>
+        <article data-aos="fade-right">
+          <figure class="velo">
+            <img src="assets/img/vert.jpeg" alt="velo en seine novice" />
+          </figure>
           <h3>Parcours Débutant(e)</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+            libero molestiae aliquid numquam perferendis ipsum molestias,
+            aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio
+            odio nobis praesentium fuga eos!
+          </p>
         </article>
-        <article>
-          <figure class="velo"><img src="assets/img/rose.jpeg" alt="velo en seine famille" /></figure>
+
+        <article data-aos="fade-up-right">
+          <figure class="velo">
+            <img src="assets/img/rose.jpeg" alt="velo en seine famille" />
+          </figure>
           <h3>Parcours décourverte en famille</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+            libero molestiae aliquid numquam perferendis ipsum molestias,
+            aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio
+            odio nobis praesentium fuga eos!
+          </p>
         </article>
-        <article>
-          
+
+        <article data-aos="fade-up-left">
           <div class="bleu">
-            <!-- plus tard le coeur -->
+            <i class="fa-solid fa-heart"></i>
           </div>
-          <figure class="velo"><img src="assets/img/bleu.jpeg" alt="velo en saine location de velo" /></figure>
+
+          <figure class="velo">
+            <img
+              src="assets/img/bleu.jpeg"
+              alt="velo en saine location de velo"
+            />
+          </figure>
           <h3>Lococation de vélo électrique</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+            libero molestiae aliquid numquam perferendis ipsum molestias,
+            aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio
+            odio nobis praesentium fuga eos!
+          </p>
         </article>
-        <article>
-          <figure class="velo"><img src="assets/img/rouge.jpeg" alt="velo en seine expert" /></figure>
+
+        <article data-aos="fade-left">
+          <figure class="velo">
+            <img src="assets/img/rouge.jpeg" alt="velo en seine expert" />
+          </figure>
           <h3>Parcours pour niveaux avancée</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero molestiae aliquid numquam perferendis ipsum molestias, aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio odio nobis praesentium fuga eos!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+            libero molestiae aliquid numquam perferendis ipsum molestias,
+            aliquam dolore ea perspiciatis. Nisi sed asperiores quisquam optio
+            odio nobis praesentium fuga eos!
+          </p>
         </article>
       </section>
-      <section></section>
+
+
+      <section data-aos="fade-right">
+
+        <section class="apple">
+          <article class="h">
+            <figure><img src="" alt=""></figure>
+            <p>151K Abonnés | 21 abonnements </p>
+            <h2>Mohamed_Gloire</h2>
+            <a href="inscrire.html">S'abonner</a>
+
+            <div class="paragraphe">
+
+              <p>
+                <strong>18</strong>livres
+              </p>
+              <p>
+                <strong>12382</strong>Pages
+              </p>
+              <p>
+                <strong>27%</strong>Objectif
+              </p>
+            </div>
+          </article>
+          <article class="b">
+
+              <figure>
+                <img src="" alt="">
+              </figure>
+
+            <div class="top">
+                <h3>Book of idea journal by simplon aulnay</h3>
+                <p>Sara Matili <span></span> 2022</p>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+
+            <div class="top"></div>
+
+          </article>
+        </section>
+
+        <section class="apple">
+          <article class="h">
+            <figure><img src="" alt=""></figure>
+            <p>151K Abonnés | 21 abonnements </p>
+            <h2>Mohamed_Gloire</h2>
+            <a href="inscrire.html">S'abonner</a>
+
+            <div class="paragraphe">
+
+              <p>
+                <strong>18</strong>livres
+              </p>
+              <p>
+                <strong>12382</strong>Pages
+              </p>
+              <p>
+                <strong>27%</strong>Objectif
+              </p>
+
+            </div>
+          </article>
+          <article class="b"></article>
+        </section>
+
+        <section class="apple">
+          <article class="h">
+            <figure><img src="" alt=""></figure>
+            <p>151K Abonnés | 21 abonnements </p>
+            <h2>Mohamed_Gloire</h2>
+            <a href="inscrire.html">S'abonner</a>
+
+            <div class="paragraphe">
+
+              <p>
+                <strong>18</strong>livres
+              </p>
+              <p>
+                <strong>12382</strong>Pages
+              </p>
+              <p>
+                <strong>27%</strong>Objectif
+              </p>
+
+            </div>
+          </article>
+          <article class="b"></article>
+        </section>
+
+        <section class="apple">
+          <article class="h">
+            <figure><img src="" alt=""></figure>
+            <p>151K Abonnés | 21 abonnements </p>
+            <h2>Mohamed_Gloire</h2>
+            <a href="inscrire.html">S'abonner</a>
+
+            <div class="paragraphe">
+
+              <p>
+                <strong>18</strong>livres
+              </p>
+              <p>
+                <strong>12382</strong>Pages
+              </p>
+              <p>
+                <strong>27%</strong>Objectif
+              </p>
+
+            </div>
+
+          </article>
+          <article class="b"></article>
+        </section>
+
+      </section>
       <section></section>
     </main>
 
