--- a/inscrire.html
+++ b/inscrire.html
@@ -407,7 +407,7 @@
     <section id="modal">
       <h2>Alert aux mineurs</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste laborum ipsum eligendi, modi molestias itaque quia adipisci dolorem rem voluptate impedit voluptas optio aliquid sed id est magni consequuntur.</p>
-      <a href="#">OK d'accord</a>
+      <a href="#modal">OK d'accord</a>
     </section>
 
     <!-- <div id="container"></div> -->
