--- a/formulaire.html
+++ b/formulaire.html
@@ -71,7 +71,7 @@
       </fieldset>
 
       <fieldset>
-        <legend>Vos Compétéences</legend>
+        <legend>Vos Compéténces</legend>
         <div class="genre">
           <label for="html">HTML</label>
           <input type="checkbox" id="html" />
